--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-datetime
+--only-binary=:all:
+
 flask
 flask_cors
 gunicorn
 dnspython>=2.0.0
-ssl
 pymongo==4.6.1
 certifi==2024.2.2
 urllib3==2.2.1
